fix: Header/logo resize on small screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ $content-width: 992px;
   float: right;
   white-space: nowrap;
   text-transform: uppercase;
-  display: inline-block;
+  // display: inline-block;
 }
 
 // @mixin small-screens() {
@@ -36,7 +36,7 @@ $content-width: 992px;
   @include headings-style;
   margin-top: 10px;
   @media (max-width: 576px) {
-    font-size: 30px;
+    font-size: 32px;
   }
 }
 
@@ -44,7 +44,7 @@ $content-width: 992px;
   @include headings-style;
   clear: both;
   @media (max-width: 576px) {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 
@@ -64,7 +64,6 @@ hr {
 .content {
   max-height: 350px;
   overflow: hidden;
-  // align-content: center;
   margin-bottom: 3%;
 }
 
